Add gui package